--- a/d4nc3r_description/config/d4nc3r/wheel.yaml
+++ b/d4nc3r_description/config/d4nc3r/wheel.yaml
@@ -1,7 +1,7 @@
 mass: 0.032        # Wheel mass in Kg
 radius: 0.0331    # Wheel radius in m
 length: 0.025     # Wheel length in m, considering is as a cylinder
-mesh: '../components/wheel.stl'  # Leave it empty ('') to have a red wheel
+mesh: ''  # Leave it empty ('') to have a red wheel
 scale: ''
 x_offset: 0.051
 y_offset: 0.049
