--- a/d4nc3r_gz/package.xml
+++ b/d4nc3r_gz/package.xml
@@ -14,13 +14,13 @@
 
   <exec_depend>d4nc3r_control</exec_depend>
   <exec_depend>d4nc3r_description</exec_depend>
-  <exec_depend>gazebo_ros_pkgs</exec_depend>
-  <exec_depend>gazebo_ros</exec_depend>
+  <depend>ros_gz_bridge</depend>
+  <depend>ros_gz_image</depend>
+  <depend>ros_gz_sim</depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>xacro</exec_depend>
 
   <exec_depend>control_msgs</exec_depend>
-  <exec_depend>gazebo_ros2_control</exec_depend>
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
