--- a/d4nc3r_handler/config/ekf.yaml
+++ b/d4nc3r_handler/config/ekf.yaml
@@ -1,4 +1,5 @@
 ### ekf config file ###
+
 ekf_filter_node:
     ros__parameters:
         # The frequency, in Hz, at which the filter will output a position estimate. Note that the filter will not begin
@@ -8,18 +9,11 @@ ekf_filter_node:
         sensor_timeout: 0.1
         two_d_mode: true
         transform_time_offset: 0.0
-        transform_timeout: 0.0
-
+        transform_timeout: 0.1
         print_diagnostics: true
-
-        debug: true
-
-        debug_out_file: file.txt
-
         permit_corrected_publication: true
         publish_acceleration: false
         publish_tf: true
-
        
         map_frame: map              # Defaults to "map" if unspecified
         odom_frame: odom            # Defaults to "odom" if unspecified
@@ -27,7 +21,6 @@ ekf_filter_node:
         world_frame: odom     # Defaults to the value of odom_frame if unspecified
 
         odom0: /d4nc3r1/odom_unfiltered
-
         # Each sensor reading updates some or all of the filter's state. These options give you greater control over which
         # values from each measurement are fed to the filter. For example, if you have an odometry message as input, but only
         # want to use its Z position value, then set the entire vector to false, except for the third entry. The order of the
@@ -46,12 +39,8 @@ ekf_filter_node:
                         false, false, true,
                         false, false, false]
 
-        # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
-        # the size of the subscription queue so that more measurements are fused.
         odom0_queue_size: 5
-
         odom0_differential: true
-        # If you have a differential odometry source, such as a wheel encoder, then set this to true. This will cause the
         odom0_relative: false
 
         imu0: /d4nc3r1/imu
@@ -62,6 +51,15 @@ ekf_filter_node:
                       true, true, true]
         imu0_queue_size: 5
         imu0_remove_gravitational_acceleration: false
+
+        yolo0: /d4nc3r1/yolo_cords
+        yolo0_update_rate: 1.0
+        yolo0_config: [true, true,  false,
+                      false, false, false,
+                      false, false, false,
+                      false, false, false]
+        yolo0_queue_size: 5
+
 
 
 
