--- a/d4nc3r_handler/package.xml
+++ b/d4nc3r_handler/package.xml
@@ -12,6 +12,10 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>robot_localization</depend>
+  <depend>rclcpp</depend>
+  <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
