--- a/d4nc3r_control/config/d4nc3r_controllers.yaml
+++ b/d4nc3r_control/config/d4nc3r_controllers.yaml
@@ -1,4 +1,3 @@
-
 controller_manager:
   ros__parameters:
     update_rate: 50  # Hz
@@ -11,20 +10,21 @@ controller_manager:
 
 diffbot_base_controller:
   ros__parameters:
-    left_wheel_names: ["left_wheel_joint"]
-    right_wheel_names: ["right_wheel_joint"]
-
+    left_wheel_names: ["d4nc3r1_left_wheel_joint"]
+    right_wheel_names: ["d4nc3r1_right_wheel_joint"]
+    odom_frame_id: "d4nc3r1_odom"
+    base_frame_id: "d4nc3r1_base_link"
     wheel_separation: 0.19
     wheel_radius: 0.034
-
+    
     wheel_separation_multiplier: 1.0
     left_wheel_radius_multiplier: 1.0
     right_wheel_radius_multiplier: 1.0
 
     publish_rate: 50.0
-    odom_frame_id: odom # Align with EKF's odom_frame for clarity
+    
+
     enable_odom_tf: false # Let EKF publish the odom->base_link TF
-    base_frame_id: base_link
     pose_covariance_diagonal : [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
 
